# midi_board

./: .gitlab-ci.yml  .pylintrc  CMakeLists.txt  README.md  package.xml  setup.py
config/: BCF2000.yaml  BCF2000_example.yaml  UR10_example.yaml  UR10_example_board_virtual.yaml  UR10_example_virtual.yaml  deep_dive_actuator_example.yaml  deep_dive_actuator_example_board_virtual.yaml  deep_dive_actuator_example_virtual.yaml
scripts/: midi_board  midi_board_virtual  virtual_midi_board
src/midi_board/: __init__.py  board.py  custom_logging.py  midi_board.ui  midi_board_ui.py  midi_dialog.py  midi_utility.py  popup_dialog.ui  popup_dialog_ui.py  popup_edit_dialog.py  utility.py  virtual_midi.py
src/midi_board/adapters/: __init__.py  adapter.py  joint_state_handler.py  lighthouse_adapter.py  ros_adapter.py
src/midi_board/controls/: __init__.py  button.py  control.py  encoder.py  encoder_button.py  set_default_button.py  slider.py  view.py
