<?xml version="1.0"?>
<package format="2">
    <name>midi_board</name>
    <version>0.1.0</version>
    <description>The midi_board package</description>

    <maintainer email="wbaker@houstonmechatronics.com">wbaker</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>hmi_cmake</build_depend>
    <depend>python-rtmidi</depend>
    <depend>python-yaml</depend>
    <depend>python-enum34</depend>
    <depend>rospy_message_converter</depend>


    <export>

    </export>

</package>
